# Predator-NoSense

./: .gitignore  BUILD.md  CREDITS.md  README.md  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
.github/workflows/: release.yml
assets/: ascii-art.txt
backend/: README.md
backend/src/: facer.c
docs/: ARCHITECTURE.md
packaging/: 99-acer-gkbbl.rules  predator-no-sense.desktop
packaging/arch/: PKGBUILD
src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  main.rs
src/components/: ColorControls.tsx  EffectControls.tsx  Header.tsx  KeyboardPreview.tsx  ModeSelector.tsx  ProfilesPanel.tsx
