[package]
name = "predator-nosense"
version = "1.0.0"
description = "Predator NoSense — modern RGB keyboard control for Acer Predator on Linux"
authors = ["Eduardo Quirino <eduardo.quirino@idals.com.br>"]
license = "GPL-3.0"
repository = "https://github.com/eduardo-qts/Predator-NoSense"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
