[package]
name = "predator-nosense"
version = "1.0.0"
description = "Predator NoSense — modern RGB keyboard control for Acer Predator on Linux"
authors = ["Eduardo Quirino <eduardo.quirino@idals.com.br>"]
license = "GPL-3.0"
repository = "https://github.com/eduardo-qts/Predator-NoSense"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
