[package]
name = "predator-nosense"
version = "1.0.0"
description = "Predator NoSense — modern RGB keyboard control for Acer Predator on Linux"
authors = ["Eduardo Quirino <eduardo.quirino@idals.com.br>"]
license = "GPL-3.0"
repository = "https://github.com/eduardo-qts/Predator-NoSense"
edition = "2021"
rust-version = "1.70"

[features]
# Enabled by `tauri build` and required for ANY release build: it turns on the
# custom protocol so the webview loads the embedded frontend (tauri://localhost)
# instead of the dev server (devUrl). Without it, `cargo build --release` ships a
# binary compiled with `dev=true` that shows "Could not connect to localhost".
# DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
